# py-ttw-day-4

./: .env  .env.development  .gitignore  DAY-3-ARVO.rst  DAY-3-MORNING.rst  DAY-3.rst  Dockerfile  Pipfile  README.rst  alembic.ini  pyproject.toml
.github/workflows/: build.yml
alembic/: README.rst  env.py
alembic/versions/: 3b059e012a52_create_profile_table.py  7d6068e835af_added_profile_awards.py  a842be825e0c_add_external_id_to_profile.py
data/: generate_profiles.py  profiles.json
docker/: app-development.dockerfile  app-production.dockerfile  db-development.dockerfile  docker-compose.yml
docker/db-init/: README.rst  init.sh
docs/: conf.py
src/api/: __init__.py  auth.py  main.py
src/api/routers/: v1.py
src/cli/: __init__.py  async_support.py  main.py  pytest_utils.py
src/cli/commands/: generate.py  generate_profiles.py  profiles.py
src/data/: profiles.json
src/dev/services/: migration.py
src/models/: __init__.py  award.py  base.py  profile.py  service.py
src/services/: __init__.py  base.py  config.py  database.py  profile.py
src/services/auth/: __init__.py  types.py
test/: conftest.py  test_kia_ora_te_ao.py
test/integration/: conftest.py
test/integration/api/: conftest.py
test/integration/api/v1/: test_bestow_award.py  test_create_profile.py  test_edit_profile.py  test_get_profile.py
test/integration/cli/: conftest.py  test_generate.py  test_profiles.py
test/integration/cli/data/: updated_profile.json
test/integration/cli/generate/: mock_api_response.json
test/integration/v1/: test_index.py
test/unit/services/: test_profile.py
