# :see: https://packaging.python.org/en/latest/specifications/declaring-project-metadata

[project]
name = "py-ttw-day-2"
version = "1.0.0"
description = "Starting point for Python Tech Transformation Workshop day 2"
readme = "README.rst"
requires-python = ">= 3.12"
license = { text = "© 2023 PHX Limited - All Rights Reserved" }
authors = [
    { email = "Phoenix Zerin <phx@phx.nz>" }
]

dependencies = [
]

[tool.autohooks]
mode = "pipenv"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
    "autohooks.plugins.pytest"
]
