# :see: https://packaging.python.org/en/latest/specifications/declaring-project-metadata

[project]
# Keep the same distro name as Day 2, to avoid conflicts.
name = "py-ttw-day-2"
version = "1.0.0"
description = "Starting point for Python Tech Transformation Workshop day 3"
readme = "README.rst"
requires-python = ">= 3.12"
license = { text = "© 2023 PHX Limited - All Rights Reserved" }
authors = [
    { email = "Phoenix Zerin <phx@phx.nz>" }
]

dependencies = [
]

[tool.autohooks]
mode = "pipenv"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
    "autohooks.plugins.pytest"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Alembic imports dateutil which has reference to deprecated method, which generates
    # a warning...which pytest dutifully warns us about.
    # Since we can't do anything about that in our code, configure pytest to ignore it.
    # :see: https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning'
]
